@@ -61,6 +61,7 @@ Current:
     patch #8219: Fix boot_start for xmega devices on jtagmkII
     patch #9185: Add extended_param to usbasp.c - erasing
     patch #8311: Add IPv6 support to the -Pnet:host:port option
+    patch #9542: Correct "usersig" on avr8x devices
 
   * Internals:
     - New avrdude.conf keyword "family_id", used to verify SIB attributes
